.provarCaches/00D410000011HE0EAM/objects/rstk__soconrc__c.object
<CustomObject>
    <description>soconrc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrc_socontract__r.rstk__externalid__c&amp; &apos;_&apos; &amp;TEXT(rstk__soconrc_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconrc_soprod__r.rstk__soprod_prod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When (and until) checked, this Recurring Charge can begin being billed.</inlineHelpText>
        <label>Recurring Charge is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_application__c</fullName>
        <inlineHelpText>This is the method by which the Recurring Charge will be applied.  Options are

Applies to All Serialized Devices
Applies to Specific Serialized Devices
Applies to Specific Product
Applies to Specific Item
Once Per Contract Period</inlineHelpText>
        <label>Charge Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Applies to All Serialized Devices</fullName>
                </value>
                <value>
                    <fullName>Applies to a Specific Item</fullName>
                </value>
                <value>
                    <fullName>Applies to a Specific Product</fullName>
                </value>
                <value>
                    <fullName>Applies to a Specific Product Group</fullName>
                </value>
                <value>
                    <fullName>Applies to Specific Serialized Devices</fullName>
                </value>
                <value>
                    <fullName>Once Per Contract Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soconrc_baseline1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 1 Baseline</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_baseline2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 2 Baseline</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_baseline3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 3 Baseline</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_billed__c</fullName>
        <inlineHelpText>Number of periods billed to-date (automatically set).</inlineHelpText>
        <label>Number of Periods Billed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_billpdprice__c</fullName>
        <formula>CASE(rstk__soconrc_priceuom__c, 

     &apos;Monthly&apos;, CASE(rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrc_price__c ,

				&apos;Quarterly&apos;, rstk__soconrc_price__c * 3,

				&apos;Semi-Annual&apos;,rstk__soconrc_price__c * 6,
    
				&apos;Annual&apos;,rstk__soconrc_price__c * 12,

      
		 0),


     &apos;Quarterly&apos;, CASE(rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrc_price__c / 3,

				&apos;Quarterly&apos;, rstk__soconrc_price__c,

				&apos;Semi-Annual&apos;,rstk__soconrc_price__c * 2,
    
				&apos;Annual&apos;,rstk__soconrc_price__c * 4,

      
		 0),


     &apos;Semi-Annual&apos;,CASE(rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrc_price__c / 6,

				&apos;Quarterly&apos;, rstk__soconrc_price__c / 2,

				&apos;Semi-Annual&apos;,rstk__soconrc_price__c,
    
				&apos;Annual&apos;,rstk__soconrc_price__c * 2,

      
		 0),

    
     &apos;Annual&apos;,CASE(rstk__soconrc_socontract__r.rstk__socontract_rcbfreq__c, 

				&apos;Monthly&apos;, rstk__soconrc_price__c / 12,

				&apos;Quarterly&apos;, rstk__soconrc_price__c / 4,

				&apos;Semi-Annual&apos;,rstk__soconrc_price__c /2,
    
				&apos;Annual&apos;,rstk__soconrc_price__c,

      
		 0),

      
     0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The charge for the Billing Period defined (the charge per Billing Period).</inlineHelpText>
        <label>Billing Period Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_combine34__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Type 3 and Type 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_comment__c</fullName>
        <label>Charge Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_deviceterm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the number of Billing Periods per device is applied.</inlineHelpText>
        <label>Apply Num of Billing Periods by Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_devicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the ‘Charge Application Method’ = Applies to a Specific Item, this field is enabled and an Item (where a Warranty record exists against the given Contract) must be selected from the dropdown.</inlineHelpText>
        <label>Covered Device Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges</relationshipLabel>
        <relationshipName>soconrcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_devsocomm__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Covered Device Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges</relationshipLabel>
        <relationshipName>soconrcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_devsoprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the ‘Charge Application Method’ = Applies to a Specific Product, this field is enabled and a Product for Purchases must be selected from the dropdown.</inlineHelpText>
        <label>Covered Device Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges (Rootstock Product Master)</relationshipLabel>
        <relationshipName>soconrcs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_earlyexitpct__c</fullName>
        <inlineHelpText>Fee percentage charged if Contract is terminated early by the Customer.</inlineHelpText>
        <label>Early Termination Fee Pct.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_forever__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Can only be set when &apos;Continue Billing When Term Expires&apos; is checked.  When checked, billing will continue until the device is terminated.</inlineHelpText>
        <label>Keep Billing Until Device is Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_noprorate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Prorate on Partial Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_overterm__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, this Recurring Charge will continue to be billed when the end of the Contract Term is reached.</inlineHelpText>
        <label>Continue Billing When Term Expires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_pbactive__c</fullName>
        <description>Number of Periods Billed &lt; Number of Periods to Bill (still need to bill?), used in the generate billing class</description>
        <formula>rstk__soconrc_billed__c &lt; rstk__soconrc_term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Periods Billed &lt; Number of Periods to Bill (still need to bill?), used in the generate billing class</inlineHelpText>
        <label>Is Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Price/period (based on the Recurring Charge Product&apos;s UOM) to be charged for that period. Price is initially set by pricing engine upon entering the Recurring Charge Product, with any applicable price modification discounts applied, but can be overridden.</inlineHelpText>
        <label>Periodic Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_priceuom__c</fullName>
        <inlineHelpText>This field is set based on the Sales UOM that is set on the Recurring Charge Product record and cannot be overridden.  Valid values are

Monthly
Quarterly
Semi-Annual
Annual</inlineHelpText>
        <label>Pricing Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soconrc_rollupprice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the price is calculated as the sum of the prices of Product Components that have been associated with the Recurring Charge Product (on Product Components tab), with any applicable price modification discounts applied.</inlineHelpText>
        <label>Price From Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sales Account that will be debited for this Recurring Charge.</inlineHelpText>
        <label>Revenue Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges</relationshipLabel>
        <relationshipName>soconrcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_seq__c</fullName>
        <inlineHelpText>A unique identifier for this specific Recurring Charge on the associated Sales Contract.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_socontract__c</fullName>
        <inlineHelpText>The Sales Contract that this Recurring Charge is associated with.</inlineHelpText>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Recurring Charges</relationshipLabel>
        <relationshipName>soconrcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rootstock Product where Product Type = Recurring Services.</inlineHelpText>
        <label>Recurring Charge Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges</relationshipLabel>
        <relationshipName>soconrcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Recurring Charge is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_taxamount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_taxrate__c</fullName>
        <inlineHelpText>When a Recurring Charge is set as taxable, this is the Tax Rate to be applied.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_taxverified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If using address/tax validation software, once verified, this field will be checked automatically.</inlineHelpText>
        <label>Tax Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_term__c</fullName>
        <inlineHelpText>Value is defaulted based on the Contract Terms &amp; the Pricing Period Type. For example, if the Term is for months and the Pricing Period Type = Monthly, field is set to 24; if Quarterly, field is set to 8. Once the field is defaulted, it can be overridden.</inlineHelpText>
        <label>Number of Periods to Bill</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_type1price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 1 Price Per</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_type2price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 2 Price Per</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_type3price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Type 3 Price Per</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_usage1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Type 1 Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_usage2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Type 2 Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconrc_usage3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Type 3 Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Recurring Charges</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Recurring_Charges</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconrc_socontract__c</columns>
        <columns>rstk__soconrc_soprod__c</columns>
        <columns>rstk__soconrc_seq__c</columns>
        <columns>rstk__soconrc_application__c</columns>
        <columns>rstk__soconrc_active__c</columns>
        <columns>rstk__soconrc_price__c</columns>
        <columns>rstk__soconrc_billpdprice__c</columns>
        <columns>rstk__soconrc_priceuom__c</columns>
        <columns>rstk__soconrc_devicitem__c</columns>
        <columns>rstk__soconrc_devsoprod__c</columns>
        <columns>rstk__soconrc_pbactive__c</columns>
        <columns>rstk__soconrc_salesacct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Recurring Charges</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__details</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Recurring Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Recurring Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Cant_change_Apply_Number_of_Billing_Peri</fullName>
        <active>true</active>
        <errorConditionFormula>(rstk__soconrc_billed__c &gt; 0) &amp;&amp; (rstk__soconrc_deviceterm__c !=  PRIORVALUE(rstk__soconrc_deviceterm__c) )</errorConditionFormula>
        <errorMessage>Apply Number of Billing Periods by Device cannot be changed if Number of Periods Billed is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Charge_Application_Method</fullName>
        <active>true</active>
        <description>Charge Application Method cannot be blank.</description>
        <errorConditionFormula>ISBLANK(TEXT(rstk__soconrc_application__c))</errorConditionFormula>
        <errorMessage>Charge Application Method cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cont_Billing_Until_Device_is_Deactivated</fullName>
        <active>true</active>
        <description>Continue Billing Until Device is Deactivated field cannot be checked if Continue Billing When Term Expires field is unchecked</description>
        <errorConditionFormula>rstk__soconrc_forever__c &amp;&amp; !rstk__soconrc_overterm__c</errorConditionFormula>
        <errorMessage>Continue Billing Until Device is Deactivated field cannot be checked if Continue Billing When Term Expires field is unchecked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cont_Billing_When_Term_Expires_condition</fullName>
        <active>true</active>
        <description>Continue Billing When Term Expires must be checked when Apply Number of Billing Periods by Device is checked</description>
        <errorConditionFormula>rstk__soconrc_deviceterm__c &amp;&amp; !rstk__soconrc_overterm__c</errorConditionFormula>
        <errorMessage>Continue Billing When Term Expires must be checked when Apply Number of Billing Periods by Device is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Continue_Billing_When_Term_Expires</fullName>
        <active>true</active>
        <description>Cannot change Continue Billing When Term Expires Field as Number of Periods Billed is more than Number of Periods to Bill .</description>
        <errorConditionFormula>!rstk__soconrc_overterm__c &amp;&amp;  PRIORVALUE(rstk__soconrc_overterm__c) &amp;&amp; (rstk__soconrc_billed__c &gt; rstk__soconrc_term__c )</errorConditionFormula>
        <errorMessage>Cannot change Continue Billing When Term Expires Field as Number of Periods Billed is more than Number of Periods to Bill .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Covered_Device_Inventory_Item</fullName>
        <active>true</active>
        <description>Covered Device Inventory Item is required if Application is Applies to a Specific Item else not required.</description>
        <errorConditionFormula>((TEXT(rstk__soconrc_application__c) == &apos;Applies to a Specific Item&apos;) &amp;&amp; ISBLANK(rstk__soconrc_devicitem__c)) || (!ISBLANK(rstk__soconrc_devicitem__c) &amp;&amp; (TEXT(rstk__soconrc_application__c) != &apos;Applies to a Specific Item&apos;) )</errorConditionFormula>
        <errorMessage>Covered Device Inventory Item is required if Application is Applies to a Specific Item else not required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Early_Termination_Fee_Pct</fullName>
        <active>true</active>
        <description>Early Termination Fee Pct cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK( rstk__soconrc_earlyexitpct__c )  &amp;&amp;  rstk__soconrc_earlyexitpct__c &lt; 0</errorConditionFormula>
        <errorMessage>Early Termination Fee Pct cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Mfg_Account</fullName>
        <active>true</active>
        <description>Mfg Account is required and should belong to Recurring Charge Product Division.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrc_salesacct__c) ||  (rstk__soconrc_salesacct__r.rstk__syacc_div__c &lt;&gt;  rstk__soconrc_soprod__r.rstk__soprod_div__c ) || (   TEXT(rstk__soconrc_salesacct__r.rstk__syacc_gltype_pl__c)  &lt;&gt; &apos;Revenue&apos;)</errorConditionFormula>
        <errorMessage>Mfg Account is required and should belong to Recurring Charge Product Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Number_of_Periods_to_Bill</fullName>
        <active>true</active>
        <description>Number of Periods to Bill is required and must be greater than zero.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrc_term__c) || rstk__soconrc_term__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Number of Periods to Bill is required and must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Periodic_Price</fullName>
        <active>true</active>
        <description>Periodic Price is Required and cannot be less than zero.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrc_price__c  ) || rstk__soconrc_price__c  &lt; 0</errorConditionFormula>
        <errorMessage>Periodic Price is Required and cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Recurring_Charge_Product</fullName>
        <active>true</active>
        <description>Recurring Charge Product is required , not modifiable and should belong to Contract Division.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrc_soprod__c) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrc_soprod__c)) ||  (rstk__soconrc_soprod__r.rstk__soprod_div__c &lt;&gt;  rstk__soconrc_socontract__r.rstk__socontract_div__c)</errorConditionFormula>
        <errorMessage>Recurring Charge Product is required , not modifiable and should belong to Contract Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Rootstock_Product_Master</fullName>
        <active>true</active>
        <description>Rootstock Product  is required if Application is  Applies to a Specific Product else not required.</description>
        <errorConditionFormula>((TEXT(rstk__soconrc_application__c) == &apos;Applies to a Specific Product&apos;) &amp;&amp; ISBLANK(rstk__soconrc_devsoprod__c)) || (!ISBLANK(rstk__soconrc_devsoprod__c) &amp;&amp;  (TEXT(rstk__soconrc_application__c) != &apos;Applies to a Specific Product&apos;)  )</errorConditionFormula>
        <errorMessage>Rootstock Product  is required if Application is  Applies to a Specific Product else not required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Contract</fullName>
        <active>true</active>
        <description>Sales Contract is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrc_socontract__c) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrc_socontract__c))</errorConditionFormula>
        <errorMessage>Sales Contract is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sequence</fullName>
        <active>true</active>
        <description>Sequence is required and must be greater than zero.</description>
        <errorConditionFormula>ISBLANK( rstk__soconrc_seq__c ) || rstk__soconrc_seq__c &lt;= 0</errorConditionFormula>
        <errorMessage>Sequence is required and must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Tax_Rate</fullName>
        <active>true</active>
        <description>Tax Rate cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_taxrate__c ) &amp;&amp; rstk__soconrc_taxrate__c  &lt; 0</errorConditionFormula>
        <errorMessage>Tax Rate cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_1_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 1 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline1__c) &amp;&amp; rstk__soconrc_baseline1__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 1 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_1_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 1 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type1price__c) &amp;&amp; rstk__soconrc_type1price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 1 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_2_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 2 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline2__c) &amp;&amp; rstk__soconrc_baseline2__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 2 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_2_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 2 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type2price__c) &amp;&amp; rstk__soconrc_type2price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 2 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_3_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 3 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline3__c) &amp;&amp; rstk__soconrc_baseline3__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 3 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_3_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 3 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type3price__c) &amp;&amp; rstk__soconrc_type3price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 3 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_4_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 4 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline4__c) &amp;&amp; rstk__soconrc_baseline4__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 4 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_4_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 4 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type4price__c) &amp;&amp; rstk__soconrc_type4price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 4 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_5_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 5 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline5__c) &amp;&amp; rstk__soconrc_baseline5__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 5 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_5_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 5 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type5price__c) &amp;&amp; rstk__soconrc_type5price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 5 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_6_Baseline_Validation</fullName>
        <active>true</active>
        <description>Type 6 Baseline Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_baseline6__c) &amp;&amp; rstk__soconrc_baseline6__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 6 Baseline must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Type_6_Price_Per_Validation</fullName>
        <active>true</active>
        <description>Type 6 Price Per Validation</description>
        <errorConditionFormula>!ISBLANK(rstk__soconrc_type6price__c) &amp;&amp; rstk__soconrc_type6price__c &lt; 0</errorConditionFormula>
        <errorMessage>Type 6 Price Per must be greater than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>